misc - test coverage addition